[gd_scene load_steps=6 format=3 uid="uid://bt5gntkfgkcg6"]

[ext_resource type="Script" path="res://scenes/objects/bullet.gd" id="1_gcnnn"]
[ext_resource type="Texture2D" uid="uid://2vxk33nux3cr" path="res://assets/Sprites/bullet.png" id="1_ya53c"]

[sub_resource type="Animation" id="Animation_6ne6l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kglaf"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jbem3"]
_data = {
"RESET": SubResource("Animation_6ne6l"),
"fade_out": SubResource("Animation_kglaf")
}

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_gcnnn")
bullet_hp = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ya53c")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-5, 2, 4, 2, 5, 1, 5, -1, 4, -2, -5, -2)

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jbem3")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
